service/minio/k8s/template/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gau-minio-deployment
  namespace: bao-${DEPLOY_ENV}-env
  labels:
    app: bao-platform
    env: ${DEPLOY_ENV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gau-minio-service
  template:
    metadata:
      labels:
        app: gau-minio-service
        env: ${DEPLOY_ENV}
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          imagePullPolicy: IfNotPresent
          command: ["minio", "server", "/data", "--console-address", ":9001"]

          ports:
            - name: api
              containerPort: 9000
            - name: console
              containerPort: 9001

          volumeMounts:
            - name: minio-data
              mountPath: /data

          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"

      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: gau-minio-pvc
